moved ElGamal after code-based crypto

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1078,3 +1078,56 @@
       year = {2014},
       url = {https://eprint.iacr.org/2014/070}
 }
+
+@inproceedings{bernstein2005poly1305,
+  title={The Poly1305-AES message-authentication code},
+  author={Bernstein, Daniel J},
+  booktitle={International workshop on fast software encryption},
+  pages={32--49},
+  year={2005},
+  organization={Springer}
+}
+
+@techreport{NIST80038D,
+  author = {National Institute of Standards and Technology},
+  title = {Recommendation for Block Cipher Modes of Operation: Galois/Counter Mode (GCM) and GMAC},
+  institution = {U.S. Department of Commerce},
+  number = {NIST Special Publication 800-38D},
+  year = {2007},
+  url = {https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-38d.pdf}
+}
+
+@techreport{NIST80038B,
+  author = {National Institute of Standards and Technology},
+  title = {Recommendation for Block Cipher Modes of Operation: The CMAC Mode for Authentication},
+  institution = {U.S. Department of Commerce},
+  number = {NIST Special Publication 800-38B},
+  year = {2016},
+  url = {https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-38B.pdf}
+}
+@inproceedings{black2000cbc,
+  title={CBC MACs for arbitrary-length messages: The three-key constructions},
+  author={Black, John and Rogaway, Phillip},
+  booktitle={Annual International Cryptology Conference},
+  pages={197--215},
+  year={2000},
+  organization={Springer}
+}
+@techreport{NIST800185,
+  author = {John Kelsey and Shu-jen Chang and Ray Perlner},
+  title = {SHA-3 Derived Functions: cSHAKE, KMAC, TupleHash and ParallelHash},
+  institution = {National Institute of Standards and Technology, U.S. Department of Commerce},
+  number = {NIST Special Publication 800-185},
+  year = {2016},
+  url = {https://nvlpubs.nist.gov/nistpubs/specialpublications/nist.sp.800-185.pdf}
+}
+@techreport{NISTFIPS202,
+  author = {{National Institute of Standards and Technology}},
+  title = {{SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions}},
+  institution = {Federal Information Processing Standards (FIPS) Publication 202},
+  year = {2015},
+  month = {August},
+  pages = {37},
+  doi = {10.6028/NIST.FIPS.202},
+  url = {http://dx.doi.org/10.6028/NIST.FIPS.202}
+}
