--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -830,15 +830,15 @@ We instantiated the encrypt-then-MAC KEM transformation using \\ \texttt{SeededK
 \subsection{Choosing MAC}\label{sec:choosing-mac}
 For concrete instantiation of McEliece+, we chose four MACs covering a variety of architectures. All MACs are parameterized with a 256-bit key and 128-bit tag, except for KMAC-256, which can have variable key and tag length.
 
-\subsubsection{Poly1305 and GMAC} are both Carter-Wegman style MACs \cite{DBLP:journals/jcss/CarterW79,DBLP:journals/jcss/WegmanC81}, which compute the tag using finite field arithmetic. It first parses the message into a sequence of finite field elements, then evalutes a polynomial whose coefficients are the message blocks and whose indeterminate is the secret key. Specifically, Poly1305 oerates in the prime field $\mathbb{F}_q$ where $q = 2^{130} - 5$. GMAC operates in the binary extension field $\mathbb{F}_{2^{128}}$.
+\paragraph{Poly1305 \cite{bernstein2005poly1305} and GMAC \cite{NIST80038D}} are both Carter-Wegman style MACs \cite{DBLP:journals/jcss/CarterW79,DBLP:journals/jcss/WegmanC81}, which compute the tag using finite field arithmetic. It first parses the message into a sequence of finite field elements, then evalutes a polynomial whose coefficients are the message blocks and whose indeterminate is the secret key. Specifically, Poly1305 oerates in the prime field $\mathbb{F}_q$ where $q = 2^{130} - 5$. GMAC operates in the binary extension field $\mathbb{F}_{2^{128}}$.
 
 In implementation, we used OpenSSL 3.3.1's \texttt{EVP\_MAC} interface. Within this interface, the Poly1305 implementation does not include a nonce and is thus only one-time secure. On the other hand, GMAC is implemented by passing all data into the ``associated data'' field of the authenticated encryption scheme AES-256-GCM, which includes a nonce and is therefore many-time secure.
 
-\subsubsection{CMAC} is based on the CBC-MAC. To compute a CMAC tag, the message is first padded and parseinto blocks. Each block is first XOR'ed with the previous block's output, then encrypted under a block cipher using the secret key. The final output is XOR'ed with a sub-key derived from the secret key before being encrypted for one last time. In our implementation, the block cipher is instantiated with AES-256, which makes it particularly suitable for embedded devices with constrainted computing capacity but hardware support for AES. CMAC is many-time secure
+\paragraph{CMAC \cite{NIST80038B}} is based on the CBC-MAC \cite{black2000cbc}. To compute a CMAC tag, the message is first padded and parsed into blocks. Each block is first XOR'ed with the previous block's output, then encrypted under a block cipher using the secret key. The final output is XOR'ed with a sub-key derived from the secret key before being encrypted for one last time. In our implementation, the block cipher is instantiated with AES-256, which makes it particularly suitable for embedded devices with constrainted computing capacity but hardware support for AES. CMAC is many-time secure.
 
-\subsubsection{KMAC} is based on the SHA-3 family of sponge functions. We chose KMAC-256, which uses Shake256 as the underlying extendasble output function. Although KMAC generally has worse performance than other MACs, it is the only construction with flexible key and tag length. We fixed the key length at 256 bits, and varied the tag length to 128, 192, and 256 bits depending on the desired security levels.
+\paragraph{KMAC \cite{NIST800185}} is based on the SHA-3 family of sponge functions \cite{NISTFIPS202}. We chose KMAC-256, which uses Shake256 as the underlying extendasble output function. Although KMAC generally has worse performance than other MACs, it is the only construction with flexible key and tag length. We fixed the key length at 256 bits, and varied the tag length to 128, 192, and 256 bits depending on the desired security levels.
 
-\subsubsection{Other MACs} TODO: Kali's part
+% \subsubsection{Other MACs} TODO: Kali's part
 
 \subsection{Performance benchmark}
 We implemented McEliece+ by modifying the reference implementation. MAC implementations are taken from OpenSSL. C code is compiled using Apple Clang 15.0.0. Performance measurement is run on Apple Silicon M1 chip. CPU clock is measured using kernel clock \texttt{mach\_absolute\_time}. Each rouine is run 10000 times, with median time reported in Table \ref{tbl:mceliece-plus-performance}.
